add translate all components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,12 +46,12 @@
     "minTemp": "Min temp.",
     "rainpassible": "Rain probability",
     "rainfall": "rainfall"
-  },  
-  "traffic":{
-    "road_status":"Traffic status",
-    "notice_date":"date",
-    "notice_section":"section",
-    "notice_contect":"contect"
+  },
+  "traffic": {
+    "road_status": "Traffic status",
+    "notice_date": "date",
+    "notice_section": "section",
+    "notice_contect": "contect"
   },
   "map": {
     "location": "Current location",
@@ -102,51 +102,56 @@
     "apple_Plum": "Quadruple Room (Apple, Plum Blossom room)",
     "cherry_room": "Quadruple Room (Cherry room)"
   },
-  "campsite": {    
+  "campsite": {
     "about": "The Wuling Farm Camping Area is located in the Alpine Botanical Garden. The park has an ecological pool, a water plant pool, a Chinese medicine park, a grass garden, a flower sea area, etc. Surrounded by mountains, from the Snow Mountain Control Station to the Sevenka Mountain Villa, you can clearly see the unknown peak. It is a rare natural summer paradise in China. It is a rare natural summer paradise in China. It is a natural summer resort in the country.",
     "camp_pallet": "camp pallet",
-    "price":"price",
-    "remark":"remark",
-    "a1_car_pallet":"A區、A1區汽車棧板",
-    "a1_car_pallet_type":"須自搭營帳，木棧板營位 。(A1區為300cm*300cm，A區為320cm*300cm)。",
-    "a1_car_pallet_remark":"電源插座乙座、專屬餐桌、使用A1區公共浴廁、專屬車位。",
-    "b_tent":"B區空中帳篷",
-    "b_tent_type":"已搭有營帳，睡墊 (210cm*240cm)。架高50cm(B)或80cm(BA)。",
-    "b_tent_remark":"有電源插座、專屬餐桌、使用管理中心兩側公共浴廁、使用公共停車場、『寵物禁止入內』。",
-    "c_tent":"C區離地空帳",
-    "c_tent_type":"已搭有營帳、睡墊(240cm*240cm)。",
-    "c_tent_remark":"電源插座乙座、專屬餐桌、使用管理中心浴廁、專屬車位。",
-    "c_car_pallet":"C區汽車棧板營位",
-    "c_car_pallet_type":"須自搭營帳、木棧板營位。(420cm*420cm)。",
-    "c-car_pallet_remark":"電源插座乙座、專屬餐桌、使用管理中心浴廁、專屬車位。",
-    "d_car_pallet":"D1區汽車棧板營位",
-    "d_car_pallet_type":"須自搭營帳，木棧板營位 。(300cm*320cm)。",
-    "d-car_pallet_remark":"有電源插座、專屬餐桌、使用D區公共浴廁、專屬車位。",
-    "e_car_pallet":"D、E區汽車棧板",
-    "e_car_pallet_type":"須自搭營帳，木棧板營位 (D1~D12為300cm*320cm，其餘為220cm*320cm)。",
-    "e-car_pallet_remark":"有電源插座、專屬餐桌、使用D區/E區公共浴廁、專屬車位。",
-    "camp_cottage":"露營屋",
-    "a1_cottage":"A1.區景觀屋",
-    "a1_cottage_type":"有照明燈，軟墊 (240cm*240cm)，寢具須自備，可睡4~5人。",
-    "al_cottage_remark":"有電源插座(僅供手機充電)、專屬餐桌、使用A1區公共浴廁、專屬車位、寵物禁止入內』",
-    "a_cottage":"A、D區.可愛露營屋",
-    "a_cottage_type":"有照明燈，軟墊 (195cm*195cm)，可睡3人，寢具須自備。",
-    "a_cottage_remark":"有電源插座(僅供手機充電)、專屬餐桌、使用A1區/D區公共浴廁、專屬車位、『寵物禁止入內』。",
-    "b_cottage":"B區.彩繪屋",
-    "b_cottage_type":"睡墊 (187cm*220cm)、高100cm(BH)。",
-    "b_cottage_remark":"有電源插座、專屬餐桌、使用管理中心兩側公共浴廁、使用公共停車場、『寵物禁止入內』。",
-    "d_cottage":"D1區.築夢屋",
-    "d_cottage_type":"位於D1區露營區新式小木屋，可睡2+1人。",
-    "d_cottage_remark":"有電源插座(僅供手機充電)、專屬餐桌、使用D區公共浴廁、專屬車位、『寵物禁止入內』。" 
-  },  
+    "price": "price",
+    "remark": "remark",
+    "a1_car_pallet": "Zone A, A1 car pallet",
+    "a1_car_pallet_type": "Must be self-funded, wooden pallet camp. (A1 area is 300cm*300cm, and area A is 320cm*300cm).",
+    "a1_car_pallet_remark": "One power outlet, exclusive dining table, public bath in A1 area, exclusive parking space.",
+    "b_tent": "Zone B aerial tent",
+    "b_tent_type": "Has a camp, sleeping pad (210cm * 240cm). The height is 50cm (B) or 80cm (BA).",
+    "b_tent_remark": "There are power outlets, exclusive dining tables, use of public baths on both sides of the management center, use of public parking lots, and pets are not allowed inside.",
+    "c_tent": "C area off the ground",
+    "c_tent_type": "Has a camp, sleeping pad (240cm * 240cm).",
+    "c_tent_remark": "Power socket B, exclusive dining table, use management center bathroom, exclusive parking space.",
+    "c_car_pallet": "Zone C car pallet camp",
+    "c_car_pallet_type": "Must be self-funded, wooden pallet camp. (420cm*420cm).",
+    "c-car_pallet_remark": "Power socket B, exclusive dining table, use management center bathroom, exclusive parking space.",
+    "d_car_pallet": "D1 area car pallet camp",
+    "d_car_pallet_type": "Must be self-funded, wooden pallet camp. (300cm*320cm).",
+    "d-car_pallet_remark": "There are power outlets, exclusive dining tables, use of D-zone public baths, and exclusive parking spaces.",
+    "e_car_pallet": "D, E area car pallet",
+    "e_car_pallet_type": "Must be self-funded, wooden pallet camp (D1 ~ D12 is 300cm * 320cm, the rest is 220cm * 320cm).",
+    "e-car_pallet_remark": "There are power outlets, exclusive dining tables, public baths in Zone D/E, and exclusive parking spaces.",
+    "camp_cottage": "Camping house",
+    "a1_cottage": "A1. District View House",
+    "a1_cottage_type": "There are lights, cushions (240cm * 240cm), bedding must be provided, can sleep 4 to 5 people.",
+    "al_cottage_remark": "Power outlet (for mobile phone charging only), exclusive dining table, use of public bath in A1 area, exclusive parking space, pets are prohibited",
+    "a_cottage": "A, D area. Lovely camping house",
+    "a_cottage_type": "There are lights, cushions (195cm * 195cm), can sleep 3 people, bedding must be provided.",
+    "a_cottage_remark": "There are power outlets (for mobile phone charging only), exclusive dining tables, use of public baths in the A1/D area, exclusive parking spaces, and pets are not allowed.",
+    "b_cottage": "District B. Painted House",
+    "b_cottage_type": "Sleeping pad (187cm * 220cm), height 100cm (BH).",
+    "b_cottage_remark": "There are power outlets, exclusive dining tables, access to public baths on both sides of the management center, use of public parking, and pets are not allowed.",
+    "d_cottage": "D1 District. Dream House",
+    "d_cottage_type": "Located in the new cabin of the D1 area camping area, it can sleep 2+1 people.",
+    "d_cottage_remark": "There are power outlets (for mobile phone charging only), exclusive dining tables, use of D-zone public baths, exclusive parking spaces, and pets are not allowed."
+  },
   "tea_saloon": {
     "name": "Wuling Farm Tea Saloon",
+    "content":"Wuling Farm Tea House sells mainly tea and agricultural products, and some hot food is provided. For those who like to drink tea, there is an exclusive tea space to enjoy the natural flavor of the natural tea.",
+    "open":"Opening hours: 07:30~18:00 daily; daily from 07:00 to 18:30 during the cold, summer and cherry blossom seasons",
     "tel": "Phone: 04-25901268",
     "fax": "Fax: 04-25901081",
     "address": "Address: No. 7-7, Wuling Road, Pingli, Pinghe Township, Taichung City, 42495 (Tea Village)"
   },
   "visitor_center": {
     "name": "Wuling Farm Service Center",
+    "content":"Wuling Farm Tourism Service Center mainly sells daily necessities (slippers, toothpaste, etc.) and popular foods (biscuits, beverages, agricultural special products, etc.). ",
+    "product":"Hot meals such as chicken noodles, Gongmao soup, Oden boiled meat, meat chop, etc. ",
+    "open":"Hours of Operation: Daily 07:00~19:00",
     "tel": "Tel: 04-25901257 ext.: 1118",
     "fax": "Tel: 04-25901353",
     "address": "Address: No. 3 Wuling Road, Pingli, Pinghe Township, Taichung City, 42495 (Travel Service Center)"
@@ -262,5 +267,70 @@
     "fruit_introduction": "We have high mountain temperate area fruit, ripened during the summer / autumn months (July to October is the fruit season). Peaches and apples are a top gift for national guests, which have been shipped out as national treasures for celebrities of foreign governments. With organic farming, the fruits are free from pesticide and are 100% examined by the Agricultural Produce Safety Commission of Taichung City Government and is granted to bear its logo as well as safe for buying and consuming.",
     "souvenirs": "Souvenirs",
     "souvenirs_introduction": "Caps, clothes, decorations, picture frames, fruit bowls, canes, umbrellas and lighters are all for sale. All of them bear the Wuling mark and are useful and have a high memorial value. The high mountain pine seed, is also available for those who are looking for a different kind of treasure."
+  },
+  "tour_guide": {
+    "north_bus": "Beigu District Deep Guided Tour Bus",
+    "north_price": "Beigu Garden Bus Ecology Guide 150 yuan / person, children preschool place 100 yuan, no place free",
+    "north_weekdays": "Weekdays: Monday to Friday",
+    "north_morniing": "9:00~11:00 am",
+    "north_afternoon": "14:30~16:30",
+    "weekend": "Holiday: Saturday to Sunday",
+    "holiday": "Summer vacation: Monday to Sunday",
+    "weekend_morning": "08:00~10:00 am; 10:00~12:00",
+    "weekend_afternoon": "13:30~15:30; 15:30~17:30",
+    "notice": "Please make an appointment in advance and adjust the reservation according to the departure time.",
+    "north_program": "North Valley Park Itinerary",
+    "north_procedure": "Departure from Wuling Hotel → Guanyutai (Sakura Hook) → Snow Mountain Trailing Point→ Camping Area Forest Coffee Bar → Wuling Tea House (about 2 hours).",
+    "south_waker": "Nangu Park walk guide commentary",
+    "south_price": "Nangu Ecology Guide Free",
+    "south_guide": "With a lively guide to the introduction of the commentator, each visitor will be surrounded by the green mountains and green waters, while understanding the beauty of nature and enriching your quality journey.",
+    "south_morning": "08:30 am ~ 10:30 am",
+    "south_afternoon": "14:30 pm ~ 16:30 pm",
+    "south_program": "Nangu Park Tour",
+    "south_procedure": "Wuling Hotel Departure → Yingbin Bridge → Bird Watching Trail → Songlin Avenue → Jiang Gong Xing Guan → Wuling Tea House (full walk, about 2 hours)."
+  },
+  "itinerary":{
+    "advice":     "Itinerary advice",
+    "tow_days":  "Two days and one night",
+    "three_days":  "Three days and two nights",
+    "first_day":  "First day",
+    "next_day":  "Next day",
+    "third_day":  "Third day",
+    "trip_one":  "In the afternoon, take a leisurely tour in Nangu or take a bus tour of Beigu Garden (150 yuan per person for self-funded trips), Chiang Kai-shek Museum (should be accompanied by Nangu Tour), tea garden ascend, visit Farmhouse Museum, and Xueba Visitor Center.",
+    "trip_two":  "In the evening, listen to live alpine concerts (2nd floor of Fuye Resort, free of charge every night from 20:30 to 21:30), stargazing activities (2nd floor of Tono Furano Resort, every night from 21:30 to 22:30).",
+    "trip_three":  "In the morning, drive to Taoshan Waterfall for a walk, picnic, and return to Guanyutai. In the afternoon, visit the ecological park, go to the tea house and buy souvenirs.", 
+    "note_one":  "Note 1: The tea garden trail is about 40 minutes.",
+    "note_two":  "Note 2: When you go to Taoshan Waterfall, you can park your car in Wuling Mountain Villa, and then walk to the waterfall (4.3 km) to walk back and forth for about 2.5~3 hours.",
+    "trip_four":"In the afternoon, take a leisurely walk or take a tour of the Beigu Garden Bus (150 yuan per person for self-funded trips), tea garden trails, visit the Farm Heritage Museum, Xueba Visitor Center, and the Taiwan Sakura Hakke Ecological Center;",
+    "tirp_five":"Listen to live alpine concerts in the evening (2nd floor of Fuye Resort, free of charge every night from 20:30 to 21:30), stargazing activities (2nd floor of Fuye Resort, 21:30~22:30 every night).",
+    "tirp_six":"In the morning, the Taoshan Waterfall Forest Trail accepts fendoline, anion baptism, and fish watching on the fish platform;",
+    "trip_seven":"Afternoon snow mountain trails, camping area to enjoy the scenery and enjoy a quiet afternoon.",
+    "trip_eight":"In the morning, the Nangu Ecological Guide explains, visits the Ecology Museum, the Jiang Gong Hotel (which must be accompanied by the Nangu Tour), purchases souvenirs, etc., and enjoys the Chinese food.",
+    "trail":"Wuling Farm Trail",
+    "trip_ten":"Choose the bird watching trail 0.95 km, the tea garden trail is 1.15 km long (about 40 minutes round trip), the bird watching butterfly trail 2.15 km, the alpine botanical garden 1.15 km, the pine forest avenue 0.3 km, the Taoshan waterfall 4.3 km (about 3 hours back and forth)"
+  },
+  "meeting_room": {
+    "center_method": "Wuling Farm Conference Room (Briefing Room) borrowing method.",
+    "center_line": " phone: 04-25901258 #1111 (08:00~17:00 daily)",
+    "center_first": "First, the scope of application:",
+    "center_provided": "Provided as a venue for various academic seminars, executive meetings, etc.",
+    "center_second": "Second, the use time:",
+    "center_divided": "It is divided into 3 hours from 08:00 to 11:00, 14:00 to 17:00, and 18:00 to 21:00.",
+    "center_third": "Third, borrowing methods:",
+    "center_field": "Please inform the field in the official document first, and indicate the name of the borrowing unit, the date and time of borrowing, the nature of the meeting, the number of participants, etc. (maximum 80 people)",
+    "center_fourth": "Fourth, the borrowing regulations:",
+    "center_one": "All facilities (including tables and chairs) in the conference room (including the briefing room) maintain the existing conditions and must not be damaged or moved.",
+    "center_two": "Indoor recreation, entertainment and gatherings are not allowed.",
+    "center_three": "In order to avoid affecting the office order, the borrowing time should not be loud and keep quiet when entering and leaving the briefing room.",
+    "center_four": "The conference room (the briefing room) provides the meeting and the male and female dressing rooms are available for use.",
+    "center_fifth": "Fifth，Charges:",
+    "center_period": "Each time period is 1,500 yuan for tea, sanitation, lighting, maintenance and maintenance. (Please bring your own eco cup and ball pen)",
+    "center_copy": "COPY NT$20、FAX NT$10"   
+  },
+  "coffee_bar" :{
+    "name":"Forest coffee bar",
+    "content":"The 30-year-old cedar stands next to it, drinking a special lavender milk tea from Wuling Farm, and dating Fendo to the forest!", 
+    "product":"On-site cakes, onion cakes, chicken noodles, pasta, pizza , diced chicken, slabs, meat, meat, etc.; hot drinks include milk tea, coffee, cocoa, ginger tea, flower tea Wait.",   
+    "tel":"tel：04-25901469"    
   }
 }
