--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -42,6 +42,12 @@
     "rainpassible": "相對濕度",
     "rainfall": "累積雨量"
   },
+  "traffic": {
+    "road_status": "路況公告",
+    "notice_date": "日期",
+    "notice_section": "路段",
+    "notice_contect": "內容"
+  },
   "wuling-hotel": {
     "introduction": "本場提供武陵國民賓館、休閒農莊及山水館等多樣化的住宿及房型選擇。提供兩人房、三人房、四人房、六人房及無障礙房間，價格則從每間客房$3420至$7500 元不等。",
     "wuling_hotel": "國民賓館",
@@ -154,6 +160,15 @@
     "cultural_resources": "七家灣遺址位於武陵遊憩區西南側山麓，恰在雪霸國家公園武陵遊客中心西南側約200公尺的階地及緩坡上面，為目前台灣所發現海拔最高的新石器時代遺址，也是台灣地區位至最高的陶器聚落遺址。係民國86年，中研院史語所劉益昌研究員接受雪霸國家公園委託，進行「大甲溪上游史前遺址與早期原住民活動跳查」計畫時所發現。並於民國87年至90年，開始進行系統話試掘與搶救發掘工作。本場為保存此遺址，將文物置於武陵富野渡假村大廳展示。",
     "cultural_suggest": "【七家灣文化遺址 生態之旅】南谷遊憩生態園區（含七家灣遺址原住民文化）"
   },
+  "agricultural": {
+    "products": "農特產品",
+    "wuling_tea": "武陵茶",
+    "tea_introduction": "由於武陵農場與國家雪霸國家公園共生共存，生態保護區應優先於公有土地內設置，因此武陵農場亦須遵守野生動物保護法及國家公園法，自民國92年已漸漸轉型為有機農業之生產。歷年茶葉農藥殘留檢驗數值皆遠低於國家規定容許量，100、101年度茶葉農藥殘留量檢驗結果更達到「未檢出」水準，證明武陵長紅茶除以特有風味著稱外，實屬兼具「安全健康」之珍稀高山紅茶。",
+    "fruit": "水蜜桃、水梨和蘋果",
+    "fruit_introduction": "我們有高山溫帶地區的果實，在夏季/秋季（7月到10月是果實季節）成熟。水蜜桃和蘋果是外國賓客的最佳禮物。 通過政府機構檢驗，100%不含農藥並獲得認證標章 。",
+    "souvenirs": "特色紀念商品",
+    "souvenirs_introduction": "賣場出售帽子、衣服、裝飾品等等。這些商品都有武陵標記，非常實用而且具有紀念價值 。"
+  },
   "ticket": {
     "ticket_price": "武陵農場入門票收費表",
     "classification": "身份別",
@@ -230,36 +245,70 @@
     "south_waker": "南谷園區步行導覽解說",
     "south_price": "南谷生態導覽 免費",
     "south_guide": "藉由解說員生動活潑導覽介紹，讓每位遊客徜徉在青山綠水的大自然懷抱下，同時能了解大自然生態之美，豐富您優質的遊程。",
-    "south_morning":"上午08:30 ~ 10:30",
-    "south_afternoon":"下午14:30 ~ 16:30",
-    "south_program":"南谷園區行程",
-    "south_procedure":"武陵賓館出發→迎賓橋→賞鳥步道→松林大道→蔣公行館→武陵茶莊(全程步行，約2小時)。"
+    "south_morning": "上午08:30 ~ 10:30",
+    "south_afternoon": "下午14:30 ~ 16:30",
+    "south_program": "南谷園區行程",
+    "south_procedure": "武陵賓館出發→迎賓橋→賞鳥步道→松林大道→蔣公行館→武陵茶莊(全程步行，約2小時)。"
+  },
+  "itinerary": {
+    "advice": "行程建議",
+    "tow_days": "兩天一夜",
+    "three_days": "三天兩夜",
+    "first_day": "第一天",
+    "next_day": "第二天",
+    "third_day": "第三天",
+    "trip_one": "下午在南谷閒步或搭乘北谷遊園巴士導覽(自費行程每人費用150元)、蔣公行館(須搭配南谷行程)、茶園登高、參觀農莊文物館、雪霸遊客中心。",
+    "trip_two": "晚間聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野富野渡假村2樓，每晚21:30~22:30)。",
+    "trip_three": "上午驅車至桃山瀑布健行、野餐、回程到觀魚台。下午參觀生態園、到茶莊品茗與選購紀念品。",
+    "note_one": "註1：茶園步道約40分鐘。",
+    "note_two": "註2：前往桃山瀑布，可將車輛停放在武陵山莊，再由山莊步行至瀑布(單趟4.3公里)來回約2.5~3小時。",
+    "trip_four": "下午場區閒步或搭乘北谷遊園巴士導覽(自費行程每人費用150元)、茶園步道、參觀農莊文物館、雪霸遊客中心、台灣櫻花鉤吻鮭生態中心；",
+    "tirp_five": "晚間聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野渡假村2樓，每晚21:30~22:30)。",
+    "tirp_six": "上午桃山瀑布森林步道接受芬多精、陰離子洗禮、觀魚台觀魚；",
+    "trip_seven": "下午雪山登山口、露營區欣賞風光及享受寧靜的午后。",
+    "trip_eight": "上午南谷生態導覽解說、參觀生態館、蔣公行館(須搭配南谷行程)、選購紀念品等，享用中餐後賦歸。",
+    "trail": "武陵農場步道",
+    "trip_ten": "選擇賞鳥步道0.95公里、茶園步道外還長1.15公里(來回約40分鐘)、賞鳥賞蝶步道2.15公里、高山植物園1.15公里、松林大道0.3km、桃山瀑布4.3公里(來回約3小時)"
   },
   "tea_saloon": {
     "name": "武陵農場茶莊",
+    "content": "武陵農場茶莊主要販賣以茶葉及農特產品為主，並有一些熱食提供。且提供喜愛泡茶喝的遊客，有一專屬泡茶空間，享受這自然環境孕育出來天然茶葉帶來的香韻潤喉滋味。",
+    "open": "營業時間: 每日 07:30~18:00；寒、暑假及櫻花季期間每日07:00~18:30",
     "tel": "電話：04-25901268 ",
     "fax": "傳真：04-25901081 ",
     "address": "地址：42495台中市和平鄉平等里武陵路7-7號(茶莊)"
   },
   "visitor_center": {
     "name": "武陵農場旅服中心",
+    "content": "武陵農場旅遊服務中心主要販賣日常用品(拖鞋、牙膏等)與大眾食品(餅乾、飲料、農特產品等)。 ",
+    "product": "假日提供雞絲麵、貢丸湯、關東煮、肉粽等熱食 ",
+    "open": "營業時間: 每日 07:00~19:00",
     "tel": "電話：04-25901257分機：1118 ",
     "fax": "專線：04-25901353 ",
     "address": "地址：42495台中市和平鄉平等里武陵路3號(旅服中心) "
   },
-  "traffic": {
-    "road_status": "路況公告",
-    "notice_date": "日期",
-    "notice_section": "路段",
-    "notice_contect": "內容"
+  "meeting_room": {
+    "conter_method": "1.武陵農場會議室（簡報室）借用方式。",
+    "center_line": "租用登記專線: 04-25901258 #1111 (每天08:00~17:00)",
+    "center_first": "一、適用範圍：",
+    "center_provided": "提供為各項學術研討會、行政會議等之召開場所。",
+    "center_second": "二、使用時間：",
+    "center_divided": "每日分為08:00~11:00；14:00~17:00；18:00~21:00等3個時段。",
+    "center_third": "三、借用方式：",
+    "center_field": "請先以公文函知本場，並將借用單位名稱、借用日期及時間、會議性質、參加人數等註明。(最多容納80人)",
+    "center_fourth": "四、借用規定：",
+    "center_one": "會議室(簡報室)內所有設施(包含桌、椅)維持既有狀況，不得破壞及移動。",
+    "center_two": "室內不得舉行康樂、遊藝及聚餐等活動。",
+    "center_three": "為避免影響本場辦公秩序，借用時間不得高聲喧嘩，並出入簡報室時保持安靜。",
+    "center_four": "會議室(簡報室)提供會議召開外，並提供男、女化妝室以供使用。",
+    "center_fifth": "五、收費規定：",
+    "center_period": "每一時段收費1500元，以供作茶水、衛生清潔、照明設備，保養與維護。(請自備環保杯與原子筆)",
+    "center_copy": "COPY$20元、FAX$10元"
   },
-  "agricultural": {
-    "products": "農特產品",
-    "wuling_tea": "武陵茶",
-    "tea_introduction": "由於武陵農場與國家雪霸國家公園共生共存，生態保護區應優先於公有土地內設置，因此武陵農場亦須遵守野生動物保護法及國家公園法，自民國92年已漸漸轉型為有機農業之生產。歷年茶葉農藥殘留檢驗數值皆遠低於國家規定容許量，100、101年度茶葉農藥殘留量檢驗結果更達到「未檢出」水準，證明武陵長紅茶除以特有風味著稱外，實屬兼具「安全健康」之珍稀高山紅茶。",
-    "fruit": "水蜜桃、水梨和蘋果",
-    "fruit_introduction": "我們有高山溫帶地區的果實，在夏季/秋季（7月到10月是果實季節）成熟。水蜜桃和蘋果是外國賓客的最佳禮物。 通過政府機構檢驗，100%不含農藥並獲得認證標章 。",
-    "souvenirs": "特色紀念商品",
-    "souvenirs_introduction": "賣場出售帽子、衣服、裝飾品等等。這些商品都有武陵標記，非常實用而且具有紀念價值 。"
+  "coffee_bar" :{
+    "name":"森林咖啡吧",
+    "content":"30年樹齡的柳杉矗立在旁，喝杯武陵農場特製薰衣草奶茶，與芬多精來場森林的約會！", 
+    "product":"現場提供有蛋餅、蔥抓餅、雞絲麵、意麵、披薩(5吋)、麥克雞塊、厚片、肉包、肉粽等；熱飲有奶茶、咖啡、可可、薑母茶、花茶等。",   
+    "tel":"專線電話：04-25901469"    
   }
 }
